# control

./: .gitignore  .gitmodules  2025.plan  README.md  control-install-packages.sh  control-setup.sh  control-update.sh  flake.nix  raspianlite-system-zero-setup.sh  setup.sh  system-zero-setup.sh  todo.txt  void-system-zero-setup.sh
.github/workflows/: mirror-system-zero-setup.yml
.qemu/: README.md  environment.sh
.qemu/USB (on :dev:disk2)/: start.sh
.qemu/USB (on disk2)/: start.sh
.qemu/Ubuntu Live/: requirements.sh  start.sh
.qemu/Void Linux/: requirements.sh  start.sh
.qemu/alpine/: start.sh
.qemu/debian/: start.sh
.qemu/disk2/: requirements.sh  start.sh
.qemu/kali/: start.sh
.qemu/macOS Catalina/: start.sh
.qemu/macOS-catalina/: requirements.sh  start.sh
.qemu/tinycore/: start.sh
.qemu/voidlinux/: start.sh
docs/: monitor_2023_cv.tex  monitor_2023_letter.tex
dotfiles/: mirror-dotvim.sh
extra/: safari-custom.css
launchd/: romes.hourd.sh  romes.initd.plist
nix/: README.md  flake.nix  parts.nix
nix/darwin/: mbp.nix  (+9 more)
orgfiles/: journal.org  references.bib
orgfiles/code/linear-mutable-arrays/: CHANGELOG.md  linear-mutable-arrays.cabal
orgfiles/code/linear-mutable-arrays/app/: Main.hs
orgfiles/code/simple-essence-neural-net/mnist/: MNIST.hs  cabal.project  mnist.cabal
orgfiles/code/simple-essence-neural-net/mnist/test/: TestAccuracy.hs
secrets/: duckdns.age  kimai.age  remote-builder-key.age  secrets.nix  wireguard-macmini.age  wireguard-mercury-mbp.age
unsorted/: control.c  preview-keylog.sh
util/: README.md  portforward.sh
(+114 files in other folders)
