cabal-version:   3.16
name:            linear-mutable-arrays
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable linear-mutable-arrays
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, linear, linear-base
    hs-source-dirs:   app
    default-language: Haskell2010
